--- a/index.html
+++ b/index.html
@@ -13,19 +13,29 @@
         <h1>Search popular Behance artists and their location</h1>
         <h3>This app allows you to search for the most popular artists and shows their location, too.</h3>
         <p>Enter a query below to search for your favorite artist and their location.</p>
-    <form id="search-term">
-        <div>
-            <input id="query" type="text" placeholder="Search Behance">
-            <input type="submit" value="Submit" class="button">
-        </div>
-        <div id="search-results">
-            <ul>
-                <li id="specificResults"></li>
-            </ul>
-        </div>
-    </form>
+        <h3>View the Top Artists</h3>
+			<form class="artist-getter">
+				<input type="text" placeholder="e.g., jQuery" name="artists" size="30"  required>
+				<input type="submit" value="submit">
+			</form>
+		</div>
+		<div class="results-container">
+			<div class="search-results"></div>
+			<div class="results"></div>
+		</div>
+	</div>
+	<div class="templates hidden">
+		<dl class="showResult user">
+			<dt>Display Name</dt>
+				<dd class="display_name"><a href="" target="_blank"></a></dd>
+			<dt>Reputation</dt>
+				<dd class="fields"></dd>
+			<dt>Post Count</dt>
+				<dd class="country"></dd>
+		</dl>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>    
-    <script src="js/app.js"></script>
+    <!--<script src="js/app.js"></script>-->
+    <script src="app2.js"></script>
 </body>
 </html>
