--- a/index.html
+++ b/index.html
@@ -5,36 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title> Diana Wallace Thinkful Tube App </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+ 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,700italic,700' rel='stylesheet' type='text/css'>    
+	<link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
+	<link rel="stylesheet" href="css/style.css">
+	
 </head>
 <body>
-    <div class="header">
-        <h1>Search popular Behance artists and their location</h1>
-        <h3>This app allows you to search for the most popular artists and shows their location, too.</h3>
-        <p>Enter a query below to search for your favorite artist and their location.</p>
-        <h3>View the Top Artists</h3>
-			<form class="artist-getter">
-				<input type="text" placeholder="e.g., jQuery" name="artists" size="30"  required>
-				<input type="submit" value="submit">
-			</form>
+    <div class="container">
+    	<div class="intro">
+        	<h2>Search popular Behance artists and their location</h2>
+        	<p>This app allows you to search for the most popular artists and shows their location, too.</p>
+        </div>
+        <div class="search-artist">
+        	<h3>Search most popular artists</h3>
+				<form class="artist-getter">
+					<input type="text" placeholder="e.g., jQuery" name="artists" size="30"  required>
+					<input type="submit" value="submit">
+				</form>
+				<div class="names">
+					
+				</div>
+
 		</div>
-		<div class="results-container">
-			<div class="search-results"></div>
-			<div class="results"></div>
-		</div>
-	</div>
-	<div class="templates hidden">
-		<dl class="showResult user">
-			<dt>Display Name</dt>
-				<dd class="display_name"><a href="" target="_blank"></a></dd>
-			<dt>Reputation</dt>
-				<dd class="fields"></dd>
-			<dt>Post Count</dt>
-				<dd class="country"></dd>
-		</dl>
+			<div class="search_map">
+    			<div id="map"></div>
+    			<img class="img-responsive" src="images/google-map.png" alt="Responsive image">
+    		</div>
+			<div class="templates">
+			<!--<dl class="showResults user">-->
+			<!--	<dt>Display Name</dt>-->
+			<!--		<dd class="display_name"><a href="" target="_blank"></a></dd>-->
+			<!--	<dt>Reputation</dt>-->
+			<!--		<dd class="fields"></dd>-->
+			<!--	<dt>Post Count</dt>-->
+			<!--		<dd class="country"></dd>-->
+			<!--</dl>-->
+    		</div>
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
+    <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
     <!--<script src="js/app.js"></script>-->
     <script src="app2.js"></script>
 </body>
