added profile image and markers on map

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title> Diana Wallace Thinkful Tube App </title>
+    <title> Diana Wallace Behance Api App </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,700italic,700' rel='stylesheet' type='text/css'>    
@@ -15,37 +15,29 @@
     <div class="container">
     	<div class="intro">
         	<h2>Search popular Behance artists and their location</h2>
-        	<p>This app allows you to search for the most popular artists and shows their location, too.</p>
+        	<p>This app allows you to search for your favorite artists and shows their location, too.</p>
         </div>
         <div class="search-artist">
-        	<h3>Search most popular artists</h3>
+        	<h3>Search for your favorite artists</h3>
 				<form class="artist-getter">
-					<input type="text" placeholder="e.g., jQuery" name="artists" size="30"  required>
+					<input type="text" placeholder="e.g., artists name" name="artists" size="30"  required>
 					<input type="submit" value="submit">
 				</form>
-				<div class="names">
-					
+				<div class="names"> <a href="" target="_blank"></a>
+					 <img src="" class='images'>
 				</div>
-
+				</div>
 		</div>
 			<div class="search_map">
     			<div id="map"></div>
     			<img class="img-responsive" src="images/google-map.png" alt="Responsive image">
     		</div>
 			<div class="templates">
-			<!--<dl class="showResults user">-->
-			<!--	<dt>Display Name</dt>-->
-			<!--		<dd class="display_name"><a href="" target="_blank"></a></dd>-->
-			<!--	<dt>Reputation</dt>-->
-			<!--		<dd class="fields"></dd>-->
-			<!--	<dt>Post Count</dt>-->
-			<!--		<dd class="country"></dd>-->
-			<!--</dl>-->
+			
     		</div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
     <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
-    <!--<script src="js/app.js"></script>-->
-    <script src="app2.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
