changed background and text colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
     	<div class="intro">
         	<h2>Search popular Behance artists and their location</h2>
-        	<p>This app allows you to search for your favorite artists and shows their location, too.</p>
+        	<p>This app allows you to search for your favorite artists and their location.</p>
         </div>
         <div class="search-artist">
         	<h3>Search for your favorite artists</h3>
@@ -23,15 +23,15 @@
 					<input type="text" placeholder="e.g., artists name" name="artists" size="30"  required>
 					<input type="submit" value="submit">
 				</form>
-				<div class="names"> <a href="" target="_blank"></a>
-					 <img src="" class='images'>
+				<div class="names"> 
+                    
 				</div>
-				</div>
+			</div>
 		</div>
-			<div class="search_map">
-    			<div id="map"></div>
-    			<img class="img-responsive" src="images/google-map.png" alt="Responsive image">
-    		</div>
+		<div class="search_map">
+			<div id="map"></div>
+			<img class="img-responsive" src="images/google-map.png" alt="Responsive image">
+		</div>
 			<div class="templates">
 			
     		</div>
