added projects api call function

--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 				<div class="names"> 
                     
 				</div>
+				<div class="projects">
+					
+				</div>
 			</div>
 		</div>
 		<div class="search_map">
 			<div id="map"></div>
-			<img class="img-responsive" src="images/google-map.png" alt="Responsive image">
+			<!--<img class="img-responsive" src="images/google-map.png" alt="Responsive image"><-->
 		</div>
 			<div class="templates">
 			
