final revisions for css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="col-xs-12">
                         <h3>Search for your favorite artists</h3>
                     <form class="artist-getter">
-                        <input type="text" placeholder="e.g., artists name" name="artists" size="30" required>
+                        <input type="text" placeholder="e.g., artists name" class="artistName" name="artists" size="30" required>
                         <input type="submit" value="submit">
                     </form>
                     </div>
